--- a/.gitignore
+++ b/.gitignore
@@ -15,4 +15,7 @@ resources/logstash-1.4.2.tar.gz
 resources/PoC
 resources/*.txt
 resources/*.xml
+resources/*.gz
+resources/*.zip
+resources/*.jar
 metrics/data/yarn
